inital layout complete

--- a/index.html
+++ b/index.html
@@ -1,10 +1,57 @@
 <!Doctype html>
-<html>
+<html lang= "en-US">
 
 	<head>
 
 		<title>EADC</title>
+		<meta charset= "UTF-8">
+
+		<link rel= "stylesheet" type = "text/css" href= "stylesheets/structures.css">
 
 	</head>
+
+	<body>
+
+		<!--header-->
+	
+		<header class= "structure">
+
+			<img src= "images/eastlogo.png" style = "float:left";>
+			<img src= "images/eastlogo.png" style = "float:right";>
+			<h1>E.A.D.C.</h1>
+			<h2>East Application Development Club</h2>
+
+		</header>
+
+
+		<!--nav-->
+
+		<nav class= "structure">
+			<ul>
+				<li><a>Projects</a></li>
+				<li><a>Tutorials</a></li>
+				<li><a>Documents</a></li>
+				<li><a>Contact</a></li>
+			</ul>
+		</nav>
+
+		<!--section-->
+
+		<section class= "structure">
+			<h1>Site currently under construction</h1>
+			<h2>For next meeting download and install eclipse and egit plugin for eclipse</h2>
+			<h3><a href = "https://www.youtube.com/watch?v=CE8UIbb_4iM"/>Link to eclipse install</a></h2>
+			<h3><a href = "https://www.youtube.com/watch?v=ptK9-CNms98" />Link to egit install</a></h2>
+		</section>
+
+		<!--footer-->
+
+		<footer class= "structure">
+			<h3>Contact: vikrameast@gmail.com</h3>
+			<h4>Domain provided by <a href = "https://pages.github.com/">github pages</a></h4>
+
+		</footer>
+
+	</body>
 
 </html>
