changed src from eastlogo to EastLogo

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	
 		<header class= "structure">
 
-			<img src= "images/eastlogo.png" style = "float:left";>
-			<img src= "images/eastlogo.png" style = "float:right";>
+			<img src= "images/EastLogo.png" style = "float:left";>
+			<img src= "images/EastLogo.png" style = "float:right";>
 			<h1>E.A.D.C.</h1>
 			<h2>East Application Development Club</h2>
 
