Added links to index and contact page

--- a/contact.html
+++ b/contact.html
@@ -41,10 +41,7 @@
 		<!--section-->
 
 		<section class= "structure">
-			<h1>Site currently under construction</h1>
-			<h2>For next meeting download and install eclipse and egit plugin for eclipse</h2>
-			<h2><a href = "https://www.youtube.com/watch?v=CE8UIbb_4iM">Link to eclipse install</a></h2>
-			<h2><a href = "https://www.youtube.com/watch?v=ptK9-CNms98">Link to egit install</a></h2>
+			<h3>Email: vikrameast@gmail.com</h3>
 		</section>
 
 		<hr />
